Adjusted image size for Honolulu tech week and also centered text

--- a/experiences.html
+++ b/experiences.html
@@ -96,18 +96,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class ="col-sm-4 text-cetner">
-                        <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Techweek.png">
+                    <div class ="col-sm-4 text-center">
+                        <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Techweek.png" width="415" height="245">
                     </div>
-                    <div class ="col-sm-4 text-cetner">
+                    <div class ="col-sm-4 text-center">
                         <iframe width="415" height="245" src="https://www.youtube.com/embed/k_5jeATqsCY?si=xOQsG9i3d__knwXS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                    <div class ="col-sm-4 text-cetner">
+                    <div class ="col-sm-4 text-center">
                         <iframe width="415" height="245" src="https://www.youtube.com/embed/5rERNrrpSKo?si=efGMH5aZiOEgcwUG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="row">
-                    <div class ="col-sm-4 text-cetner">
+                    <div class ="col-sm-4 text-center">
                         <h1>Honolulu Tech Week</h1>
                         <p>
                            Honolulu tech week was an app contest in which contestants were able to choose their own problem on Hawaii and propose an app/solution to this problem.
@@ -116,7 +116,7 @@
                         </p>
                         <a href="https://drive.google.com/file/d/1HB4nPFYFNRQUdQxPrrWBPHExvV_eprqZ/view?usp=sharing">Presentation</a>
                     </div>
-                    <div class ="col-sm-4 text-cetner">
+                    <div class ="col-sm-4 text-center">
                         <h1>Congressional App Challenge 2024</h1>
                         <p>
                             The Congressional App Challenge prompted students to brainstorm and design an app idea for a purpose to find. The purpose of the Congressional App Challenge
@@ -124,7 +124,7 @@
                             Honolulu Tech Week submission. However, more content and updates were made as well as debugging. 
                         </p>
                     </div>
-                    <div class ="col-sm-4 text-cetner">
+                    <div class ="col-sm-4 text-center">
                         <h1>Hawaii Annual Code Challenge 2024 (HACC)</h1>
                         <p>
                             The HAAC is an annual contest in which companies, organizations, and people present their own problem/challenge to competitors for them to choose
