Added video for Honolulu Tech Week

--- a/experiences.html
+++ b/experiences.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="row">
                     <div class ="col-sm-4 text-center">
-                        <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Techweek.png" width="415" height="245">
+                        <iframe width="415" height="245" src="https://www.youtube.com/embed/BupKBkUaln4?si=4IIy03utCQJM4nAj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class ="col-sm-4 text-center">
                         <iframe width="415" height="245" src="https://www.youtube.com/embed/k_5jeATqsCY?si=xOQsG9i3d__knwXS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -114,7 +114,6 @@
                            For my group we presented a Waipahu High School app to help convey information at Waipahu High School more efficently and conveniently. This app is designated
                            for parents, students, faculty, and teachers. 
                         </p>
-                        <a href="https://drive.google.com/file/d/1HB4nPFYFNRQUdQxPrrWBPHExvV_eprqZ/view?usp=sharing">Presentation</a>
                     </div>
                     <div class ="col-sm-4 text-center">
                         <h1>Congressional App Challenge 2024</h1>
