Replaced image with an iframe

--- a/resume.html
+++ b/resume.html
@@ -44,14 +44,14 @@
         <main class="container-fluid cover">
             <div class="text-center row">
                 <div class="col-sm-12">
-                    <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Ramos_Resume%20(2)-1.png">
+                    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTwclaOOSpSqVUqBXNdUAhKecF1wzE9wyDqtpomLSKafzZh1mwyiaBJxf_56rY4KwdtzbNwqfkjVIsu/pub?embedded=true"></iframe>
                 </div>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
             <div class="container">
   
-        <div class="row">
+        <div class="row">`
         <div class="col-sm-12 text-center">
                 <h4 class="text-uppercase text-white">Contact Information</h4>
             </div>
