Readjusted image size

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -192,7 +192,13 @@
                   </p>
               </div>
               <div class="col-sm-7">
-                <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/IMG_8082.jpg" height="500px" width="600px">
+                <div id="PTK" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/IMG_8082.jpg" class="d-block w-100" alt="...">
+                    </div>
+                  </button>
+              </div>
             </div>
           </div>
           <hr>
