Removed div row for iframe

--- a/resume.html
+++ b/resume.html
@@ -42,10 +42,8 @@
             </div>
         </nav>
         <main class="container-fluid cover">
-            <div class="text-center row">
-                <div class="col-sm-12">
+            <div class="text-center">
                     <iframe src="https://docs.google.com/document/d/e/2PACX-1vTwclaOOSpSqVUqBXNdUAhKecF1wzE9wyDqtpomLSKafzZh1mwyiaBJxf_56rY4KwdtzbNwqfkjVIsu/pub?embedded=true"></iframe>
-                </div>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
