--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -33,7 +33,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="https://drive.google.com/file/d/1yu5LA78L0KZBI9Cdqjo_9QPJUhFnMzwo/view?usp=sharing">Resume</a>
+                        <a class="nav-link text-white" href="resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="certifications.html">Certifications</a>
