Removed cover class for iframe

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
         </nav>
-        <main class="container-fluid cover">
+        <main class="container-fluid ">
             <div class="text-center">
                     <iframe src="https://docs.google.com/document/d/e/2PACX-1vTwclaOOSpSqVUqBXNdUAhKecF1wzE9wyDqtpomLSKafzZh1mwyiaBJxf_56rY4KwdtzbNwqfkjVIsu/pub?embedded=true"></iframe>
             </div>
