Adjusted iframe for resume

--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
         </nav>
         <main class="container-fluid ">
             <div class="text-center">
-                    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTwclaOOSpSqVUqBXNdUAhKecF1wzE9wyDqtpomLSKafzZh1mwyiaBJxf_56rY4KwdtzbNwqfkjVIsu/pub?embedded=true"></iframe>
+                    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTwclaOOSpSqVUqBXNdUAhKecF1wzE9wyDqtpomLSKafzZh1mwyiaBJxf_56rY4KwdtzbNwqfkjVIsu/pub?embedded=true" width = "100%" height="100%"></iframe>
             </div>
         </main>
         <footer class="bg-body-tertiary text-center text-lg-start contact">
