--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -67,13 +67,10 @@
                     <div id="judo" class="carousel slide">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://e-portfolio.static.domains/DSC04446%20(1).jpeg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/JudoPic.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/DSC09116.jpeg" class="d-block w-45 center" height="500" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/DSC04893.jpeg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/JudoPic2.png" class="d-block w-45 center" height="500px" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#judo" data-bs-slide="prev">
