Tried fixing spacing

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </nav>
         <main class="container-fluid cover">
             <div class="text-center row container">
-                <div class="Col-12 text-center">
+                <div class="Col-sm-12 text-center">
                     <h3>Ian Gabriel C. Ramos</h3> 
                     <img src = "https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/headshot.png"
                     height="300" width="225">
                 </div>
             </div>
             <div class="text-center row container">
-                <div class ="Col-12 text-center">
+                <div class ="col-12 text-center">
                     <h1>Who Am I?</h1>
                     <p>Hello world! My name is Ian Gabriel Ramos and I am currently
                     a student at Waipahu High School. Throughout my life, I
@@ -74,12 +74,12 @@
             </div>
             <hr class="hr hr-blurry">
             <div class="text-center row container">
-                <div class = "Col-sm-12 text-center">
+                <div class = "col-sm-12 text-center">
                     <h3 class="text-lg">Career and Future Objectives</h3>
                 </div>
             </div>
             <div class="text-center row container">
-                <div class = "Col-sm-12 text-center">
+                <div class = "col-sm-12 text-center">
                     <ol>
                         <li>Graduate UH Manoa in Mechanical Engineering</li>
                         <li>Gain work experience through various internships regarding mechcanical engineering or robotics</li>
