--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -70,7 +70,7 @@
                             <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/JudoPic.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/JudoPic2.png" class="d-block w-45 center" height="500px" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/JudoPic2.png" class="d-block w-100 center" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#judo" data-bs-slide="prev">
