--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -138,19 +138,16 @@
                     <div id="PTK" class="carousel slide">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_8810.jpg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/WGT.JPG" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_6259.jpg" class="d-block w-100 center"  alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Waimea(3).png" class="d-block w-100 center"  alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy%20of%20IMG_8811.jpg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Botanical.JPG" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_0534.jpg" class="d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_0531.jpg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/Waimea(2).png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#PTK" data-bs-slide="prev">
