--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -100,13 +100,13 @@
                     <div id="MathTeam" class="carousel slide">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://e-portfolio.static.domains/IMG_0306.jpg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/MathTeam.JPG" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_6703.jpg" class="d-block w-100 center"  alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/MathBowl.JPG" class="d-block w-100 center"  alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/Copy_of_IMG_5395.jpg" class="d-block w-100" alt="...">
+                            <img src="https://raw.githubusercontent.com/iramos0301/Electronic-Portfolio/refs/heads/main/externalFiles/MathBowl.JPG" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#MathTeam" data-bs-slide="prev">
