Removed links for education

--- a/education.html
+++ b/education.html
@@ -141,24 +141,24 @@
                             <tr>
                                 <td>Fall</td>
                                 <td>N/A</td>
-                                <td><a href="#">MUS 107:</a> A</td>
-                                <td><a href="#">HWST 107:</a> B <br><a href="#">MATH 103:</a> A</td>
-                                <td><a href="#">CHEM 162:</a> A <br> <a href="#">CHEM 162L:</a> A <br><a href="#"> MATH 241:</a> A</td>
-                                <td><a href="#">MATH 244: </a> A <br><a href="#"> PHYS 170: </a>B<br><a href="#">PHYS 170L: </a>A<br><a href="#">EE 160:</a> A</td>
+                                <td><p>MUS 107:</p> A</td>
+                                <td><p>HWST 107:</p> B <br><p>MATH 103:</p> A</td>
+                                <td><p>CHEM 162:</p> A <br> <p>CHEM 162L:</p> A <br><p> MATH 241:</p> A</td>
+                                <td><p>MATH 244: </p> A <br><p> PHYS 170: </p>B<br><p>PHYS 170L: </p>A<br><p>EE 160:</p> A</td>
                             </tr>
                             <tr>
                                 <td>Spring</td>
                                 <td>N/A</td>
-                                <td><a href="#">HIST 151:</a> A</td>
-                                <td><a href="#">ENG 100:</a> A <br><a href="#"> MATH 140X:</a> A</td>
-                                <td><a href="#">ICS 111:</a> A <br> <a href="#">MATH 242:</a> A</td>
-                                <td><a href="">PHYS 272: WIP</a><a href="">PHYS 272L: WIP</a><a href="">EE 211: WIP</a></td>
+                                <td><p>HIST 151:</p> A</td>
+                                <td><p>ENG 100:</p> A <br><p> MATH 140X:</p> A</td>
+                                <td><p>ICS 111:</p> A <br> <p>MATH 242:</p> A</td>
+                                <td><p>PHYS 272: WIP</p><br><p>PHYS 272L: WIP</a><br><p>EE 211: WIP</p></td>
                             </tr>
                             <tr>
                                 <td>Summer</td>
-                                <td><a href="#">IS 103:</a> A</td>
-                                <td> <a href="#">ASTR 110:</a> A <br> <a href="#">ECON 130:</a> A</td>
-                                <td><a href="#">CHEM 161:</a> A <br> <a href="#">CHEM 161L:</a> B</td>
+                                <td><p>IS 103:</p> A</td>
+                                <td> <p>ASTR 110:</p> A <br> <p>ECON 130:</p> A</td>
+                                <td><p>CHEM 161:</p> A <br> <p>CHEM 161L:</p> B</td>
                                 <td>N/A</td>
                                 <td>N/A</td>
                             </tr>
