Fixed formatting of education

--- a/education.html
+++ b/education.html
@@ -141,24 +141,24 @@
                             <tr>
                                 <td>Fall</td>
                                 <td>N/A</td>
-                                <td><p>MUS 107:</p> A</td>
-                                <td><p>HWST 107:</p> B <br><p>MATH 103:</p> A</td>
-                                <td><p>CHEM 162:</p> A <br> <p>CHEM 162L:</p> A <br><p> MATH 241:</p> A</td>
-                                <td><p>MATH 244: </p> A <br><p> PHYS 170: </p>B<br><p>PHYS 170L: </p>A<br><p>EE 160:</p> A</td>
+                                <td><p>MUS 107: A</p></td>
+                                <td><p>HWST 107 B:</p>  <br><p>MATH 103: A</p></td>
+                                <td><p>CHEM 162: A</p><br> <p>CHEM 162L: A</p><br><p> MATH 241: A</p></td>
+                                <td><p>MATH 244: A</p><br><p> PHYS 170: B</p>B<br><p>PHYS 170L: A</p>A<br><p>EE 160: A</p></td>
                             </tr>
                             <tr>
                                 <td>Spring</td>
                                 <td>N/A</td>
-                                <td><p>HIST 151:</p> A</td>
-                                <td><p>ENG 100:</p> A <br><p> MATH 140X:</p> A</td>
-                                <td><p>ICS 111:</p> A <br> <p>MATH 242:</p> A</td>
-                                <td><p>PHYS 272: WIP</p><br><p>PHYS 272L: WIP</a><br><p>EE 211: WIP</p></td>
+                                <td><p>HIST 151: A</p></td>
+                                <td><p>ENG 100: A</p><br><p> MATH 140X: A</p></td>
+                                <td><p>ICS 111: A</p> <br> <p>MATH 242: A</p> </td>
+                                <td><p>PHYS 272: WIP</p><br><p>PHYS 272L: WIP</p><br><p>EE 211: WIP</p></td>
                             </tr>
                             <tr>
                                 <td>Summer</td>
-                                <td><p>IS 103:</p> A</td>
-                                <td> <p>ASTR 110:</p> A <br> <p>ECON 130:</p> A</td>
-                                <td><p>CHEM 161:</p> A <br> <p>CHEM 161L:</p> B</td>
+                                <td><p>IS 103: A</p> </td>
+                                <td> <p>ASTR 110: A</p>  <br> <p>ECON 130: A</p> </td>
+                                <td><p>CHEM 161: A</p> <br> <p>CHEM 161L: B</p></td>
                                 <td>N/A</td>
                                 <td>N/A</td>
                             </tr>
