Fixed formatting of education

--- a/education.html
+++ b/education.html
@@ -142,7 +142,7 @@
                                 <td>Fall</td>
                                 <td>N/A</td>
                                 <td><p>MUS 107: A</p></td>
-                                <td><p>HWST 107 B:</p>  <br><p>MATH 103: A</p></td>
+                                <td><p>HWST 107: B</p>  <br><p>MATH 103: A</p></td>
                                 <td><p>CHEM 162: A</p><br> <p>CHEM 162L: A</p><br><p> MATH 241: A</p></td>
                                 <td><p>MATH 244: A</p><br><p> PHYS 170: B</p>B<br><p>PHYS 170L: A</p>A<br><p>EE 160: A</p></td>
                             </tr>
